0.3.0
=====
TODO check if the new OdeMath.dCalcMatrix3Det and dInvertMatrix3 are really used.
TODO add include/ode/threading*.h

- Start migration to ODE 0.13.0


0.2.9
=====
- Fixed possible infinite loop when calling dxQuickStepParameters.clone()
- fixed problem in low level check in Cstdio.fprintf()
- Deprecated equals() methods for DVector3, DVector6 and DQuaternion
- fixed NaN Check in Common.java
- Migration to Java 7!!!!
- Set version to 0.2.9
- Cleaned up javadoc (@remarks/note/warning to <p>REMARKS:/...) and removed @brief/@ingroup/@defgroup
- Updated license dates to 2014.
- CLeaned up plenty of compiler warnings


0.2.8
=====
- Fixed issue #9: Exception when updating large trimeshes


0.2.7
=====
- Merged 'cpp' package into 'core' package
- Issue #3: porting typo in space collider